# eu-company-intelligence

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
api/: auth.py  main.py  settings.py
api/lib/: email_generator.py  equans_scoring.py  financial_signals.py  founder_interpreter.py  onepager.py  onepager_pdf.py
api/routers/: companies.py  dashboard.py  equans.py  export.py  favorites.py  founder.py  scrape.py  signals.py
api/schemas/: company.py
frontend/: index.html
scraper/: cli.py
scraper/db/: migrate.py  models.py  session.py
scraper/enrichers/: batch_fi_creator.py  contact_guesser.py  currency.py  dach_web_search.py  de_bundesanzeiger.py  de_northdata.py  de_web_search.py  de_website_content.py  founder_enricher.py  fr_dgfip.py  fr_financials_mcp.py  fr_gov.py  fr_mcp.py  gb_lei_revenue.py  gb_sic.py  gb_web_search.py  gleif_dates.py  it_web_search.py  nace.py  nace_inferrer.py  nl_web_search.py  no_revenue.py  pl_equans.py  pl_es_revenue.py  pl_revenue.py  reinterpret_fi.py  uk_revenue.py  website_enricher.py  yf_financials.py
scraper/pipeline/: normalizer.py  orchestrator.py
scraper/scrapers/: austria_curated.py  base.py  belgium.py  belgium_curated.py  brokers.py  bundesanzeiger.py  de_directories.py  denmark.py  denmark_curated.py  eu_directories.py  france.py  france_bulk.py  germany.py  gleif_bulk.py  gleif_targeted.py  goudengids_nl.py  italy.py  japan.py  netherlands.py  netherlands_curated.py  norway.py  poland.py  portugal.py  romania.py  spain.py  sweden.py  switzerland.py  uk.py  yf_bootstrap.py  zefix_ch.py
(+2 files in other folders)
