[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "eu-company-scraper"
version = "0.1.0"
description = "Scraper for European companies with >75M EUR revenue"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "aiolimiter>=1.1",
    "click>=8.1",
    "rich>=13.0",
    "rapidfuzz>=3.0",
    "anthropic>=0.40",
    "reportlab>=4.0",
    "fpdf2>=2.7",
    "beautifulsoup4>=4.12",
    "yfinance>=0.2",
    "xlrd>=2.0",
]

[project.scripts]
scrape = "scraper.cli:cli"
